test_nextest_tail.txt

warning: variant `Id` is never constructed
    --> src/relation/eager.rs:2722:26
     |
2722 |         enum TagColumn { Id }
     |              ---------   ^^
     |              |
     |              variant in this enum
     |
     = note: `TagColumn` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: fields `id` and `tenant_id` are never read
   --> src/relation/lazy.rs:254:28
    |
254 |         struct UserModel { id: i32, tenant_id: i32 }
    |                ---------   ^^       ^^^^^^^^^
    |                |
    |                fields in this struct
    |
    = note: `UserModel` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: variants `Id` and `TenantId` are never constructed
   --> src/relation/lazy.rs:257:29
    |
257 |         enum TenantColumn { Id, TenantId }
    |              ------------   ^^  ^^^^^^^^
    |              |
    |              variants in this enum
    |
    = note: `TenantColumn` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: variants `Id` and `TenantId` are never constructed
   --> src/relation/lazy.rs:280:27
    |
280 |         enum UserColumn { Id, TenantId }
    |              ----------   ^^  ^^^^^^^^
    |              |
    |              variants in this enum
    |
    = note: `UserColumn` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: fields `id` and `user_id` are never read
   --> src/relation/lazy.rs:420:28
    |
420 |         struct PostModel { id: i32, user_id: i32 }
    |                ---------   ^^       ^^^^^^^
    |                |
    |                fields in this struct
    |
    = note: `PostModel` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: variant `Id` is never constructed
   --> src/relation/lazy.rs:423:27
    |
423 |         enum UserColumn { Id }
    |              ----------   ^^
    |              |
    |              variant in this enum
    |
    = note: `UserColumn` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: variants `Id` and `UserId` are never constructed
   --> src/relation/lazy.rs:436:27
    |
436 |         enum PostColumn { Id, UserId }
    |              ----------   ^^  ^^^^^^
    |              |
    |              variants in this enum
    |
    = note: `PostColumn` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: variant `Id` is never constructed
   --> src/partial_model/query.rs:222:9
    |
221 |     enum TestColumn {
    |          ---------- variant in this enum
222 |         Id,
    |         ^^
    |
    = note: `TestColumn` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis

warning: `lifeguard` (example "query_builder") generated 1 warning
warning: `lifeguard` (lib test) generated 51 warnings
warning: unused imports: `AngleBracketedGenericArguments`, `Expr`, `GenericArgument`, `PathArguments`, `PathSegment`, and `Path`
    --> lifeguard-derive/src/type_conversion.rs:1303:19
     |
1303 |         use syn::{PathSegment, Path, PathArguments, AngleBracketedGenericArguments, GenericArgument, Expr};
     |                   ^^^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^
     |
     = note: `#[warn(unused_imports)]` on by default

warning: `lifeguard-derive` (lib test) generated 1 warning (run `cargo fix --lib -p lifeguard-derive --tests` to apply 1 suggestion)
error: expected `;`, found `println`
  --> examples/test_sql_generation.rs:80:11
   |
80 |     Ok(())
   |           ^ help: add `;` here
81 |     
82 |     println!("Generated SQL:");
   |     ------- unexpected token

error: expected `;`, found `println`
   --> examples/test_sql_generation.rs:106:11
    |
106 |     Ok(())
    |           ^ help: add `;` here
107 |     
108 |     println!("Generated SQL:");
    |     ------- unexpected token

error[E0583]: file not found for module `chart_of_accounts`
 --> examples/test_sql_generation.rs:7:5
  |
7 |     pub mod chart_of_accounts;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `chart_of_accounts`, create file "examples/entities/chart_of_accounts.rs" or "examples/entities/chart_of_accounts/mod.rs"
  = note: if there is a `mod chart_of_accounts` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `account`
 --> examples/test_sql_generation.rs:8:5
  |
8 |     pub mod account;
  |     ^^^^^^^^^^^^^^^^
  |
  = help: to create the module `account`, create file "examples/entities/account.rs" or "examples/entities/account/mod.rs"
  = note: if there is a `mod account` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `journal_entry`
 --> examples/test_sql_generation.rs:9:5
  |
9 |     pub mod journal_entry;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `journal_entry`, create file "examples/entities/journal_entry.rs" or "examples/entities/journal_entry/mod.rs"
  = note: if there is a `mod journal_entry` elsewhere in the crate already, import it with `use crate::...` instead

error[E0576]: cannot find associated type `Entity` in trait `LifeModelTrait`
  --> examples/test_sql_generation.rs:42:57
   |
42 |     let table_def = <ChartOfAccount as LifeModelTrait>::Entity::table_definition();
   |                                                         ^^^^^^ not found in `LifeModelTrait`

error[E0425]: cannot find value `generated_sql` in this scope
  --> examples/test_sql_generation.rs:52:20
   |
52 |     println!("{}", generated_sql);
   |                    ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `generated_sql` in this scope
  --> examples/test_sql_generation.rs:64:47
   |
64 |     let generated_normalized = normalize_sql(&generated_sql);
   |                                               ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `generated_sql` in this scope
  --> examples/test_sql_generation.rs:83:20
   |
83 |     println!("{}", generated_sql);
   |                    ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `generated_sql` in this scope
  --> examples/test_sql_generation.rs:91:47
   |
91 |     let generated_normalized = normalize_sql(&generated_sql);
   |                                               ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `generated_sql` in this scope
   --> examples/test_sql_generation.rs:109:20
    |
109 |     println!("{}", generated_sql);
    |                    ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `generated_sql` in this scope
   --> examples/test_sql_generation.rs:117:47
    |
117 |     let generated_normalized = normalize_sql(&generated_sql);
    |                                               ^^^^^^^^^^^^^ not found in this scope

warning: unreachable statement
  --> examples/test_sql_generation.rs:51:5
   |
46 |     return Ok(());
   |     ------------- any code following this expression is unreachable
...
51 |     println!("Generated SQL:");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` on by default
   = note: this warning originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0425, E0576, E0583.
For more information about an error, try `rustc --explain E0425`.
warning: `lifeguard` (example "test_sql_generation") generated 1 warning
error: could not compile `lifeguard` (example "test_sql_generation") due to 12 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
[31;1merror[0m: command `[1m/Users/casibbald/.rustup/toolchains/nightly-aarch64-apple-darwin/bin/cargo test --no-run --message-format json-render-diagnostics --workspace --all-features[0m` exited with code [1m101[0m
Build Failed: Command "TEST_DATABASE_URL=$(./scripts/get_test_connection_string.sh) cargo nextest run --workspace --all-features" failed: exit status 101

1 File Changed: [Cargo.lock]
